# agent-eth

./: .gitignore  Cargo.toml  README.md  client_rag.db  test_fix.sh
.claude/: settings.local.json
client/: Cargo.toml  client_rag.db
client/docs/contracts/: swaprouter.sol
client/docs/uniswap/: api_subgraph_guides_v3-examples.md  api_subgraph_guides_v4-examples.md  api_subgraph_overview.md  archived_changelog.md  concepts_glossary.md  concepts_governance_adversarial-circumstances.md  concepts_governance_glossary.md  concepts_governance_guide-to-voting.md  concepts_governance_overview.md  concepts_governance_process.md  concepts_overview.md  concepts_protocol_concentrated-liquidity.md  concepts_protocol_fees.md  concepts_protocol_hooks.md  concepts_protocol_integration-issues.md  concepts_protocol_oracle.md  concepts_protocol_range-orders.md  concepts_protocol_swaps.md  concepts_research.md  concepts_resources.md  concepts_uniswap-protocol.md  contracts_permit2_overview.md  contracts_permit2_reference_allowance-transfer.md  contracts_permit2_reference_signature-transfer.md  contracts_smart-wallet_advanced-usage_alternative-signers.md  contracts_smart-wallet_advanced-usage_erc-7739.md  contracts_smart-wallet_advanced-usage_erc-7914.md  contracts_smart-wallet_advanced-usage_hooks.md  contracts_smart-wallet_concepts_batched-transactions.md  contracts_smart-wallet_concepts_delegation.md  contracts_smart-wallet_concepts_gas-abstraction.md  contracts_smart-wallet_deployments.md  contracts_smart-wallet_overview.md  contracts_smart-wallet_technical-reference.md  contracts_uniswapx_guides_arbitrum_arbitrumfiller.md  contracts_uniswapx_guides_mainnet_becomequoter.md  contracts_uniswapx_guides_mainnet_createfiller.md  contracts_uniswapx_guides_priority_priorityorderreactor.md  contracts_uniswapx_guides_webhooks.md  contracts_uniswapx_overview.md  (+522 more)
client/src/: agent.rs  cli.rs  error.rs  lib.rs  main.rs  mcp_client.rs
client/src/application/: agent_service.rs  mod.rs  use_cases.rs
client/src/commands/: agent.rs  balance.rs  contract_check.rs  docs.rs  interactive.rs  mod.rs  swap.rs  transfer.rs
client/src/domain/: mod.rs  models.rs  services.rs
client/src/infrastructure/: account_service.rs  ethereum_service.rs  mcp_adapter.rs  mod.rs
client/src/infrastructure/ai/: agent_impl.rs  claude_client.rs  mod.rs
client/src/presentation/: command_handlers.rs  formatters.rs  mod.rs
client/src/rag/: embeddings.rs  ingestion.rs  mod.rs  storage.rs
client/src/tools/: balance.rs  contract_check.rs  mod.rs  swap.rs  transfer.rs
server/: Cargo.toml
server/src/: error.rs  lib.rs  main.rs  mcp_server.rs  provider.rs
server/src/api/: address_resolver.rs  mod.rs
server/src/contracts/: mod.rs
server/src/tools/: balance.rs  contract_check.rs  mod.rs  swap.rs  token_balance.rs  transfer.rs
tasks/: todo.md
