[package]
name = "agent-eth-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# HTTP client for API calls
reqwest = { version = "0.11", features = ["json"] }

# MCP client - use local implementation
# mcp = "0.3"

# CLI utilities
clap = { version = "4.0", features = ["derive"] }
rustyline = "14.0"
colored = "2.0"

# Async runtime
futures = "0.3"