[package]
name = "agent-eth-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }


# HTTP client for Claude API and RAG embedding service
reqwest = { version = "0.11", features = ["json"] }

# CLI utilities
clap = { version = "4.0", features = ["derive"] }
rustyline = "14.0"
colored = "2.0"
inquire = "0.7"

# Async runtime
futures = "0.3"

# RAG dependencies  
walkdir = "2.0"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }

# Error handling
thiserror = "1.0"