[package]
name = "agent-eth-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Ethereum interaction (migrated from deprecated ethers-rs to Alloy)
alloy = { version = "1.0", features = ["full"] }

# HTTP server for MCP
axum = "0.7"
tower = "0.4"

# Async utilities
futures = "0.3"

# Address and transaction types
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json"] }

# External API integration
regex = "1.0"

[dev-dependencies]
tokio-test = "0.4"
